# cppproj

./: README.md  a.out  leftover.cpp
ag/queue/: prique.cpp
concurrency/: autopurge.cpp  jthread.cpp  messageTransfer.cpp  move-only.cpp  parathread.cpp  thread.cpp  threadCon.cpp  threadref.cpp
design_mode/: README.md  siggleton.cpp
design_mode/abstract_factory/: abfactory.cc  abfactory.cpp
design_mode/adaptor/: a.out  adaptor.cpp  mian.cc
design_mode/bridge/: main.cc
design_mode/builder/: builder.cpp
design_mode/chainOfCommand/: main.cc
design_mode/commandpattern/: command.cpp
design_mode/component/: component.cpp
design_mode/decorator/: decorator.cpp
design_mode/facademode/: FacademodeDemo.cpp
design_mode/factory/: factory.cpp  factory2.cpp
design_mode/interpreter_Pattern/: interpreter_pattern.cc
design_mode/iterator/: iterator.cc
design_mode/mediator/: mediator.cpp
design_mode/memento/: memento.cpp  memento_inst.cpp
design_mode/oberver/: observer.cpp
design_mode/prototype/: prototype.cpp
design_mode/proxy/: proxy.cpp  proxydemo.cpp
design_mode/sharemeta/: base_derive.cpp  shared_data.cpp  sharemeta.cpp
design_mode/singleton/: a.out  dclp.cpp  del_singleton.cpp  lazy_tt.cpp  lock_singleton.cpp  singleton_hungry.cpp  singleton_lazy.cpp  static_local_singleton.cpp
design_mode/statemode/: statemode.cpp
design_mode/strategymode/: strategy.cpp  strategymode.cpp
design_mode/template/: template.cc  template.cpp
design_mode/visitor/: visitor.cpp
other/: ep-data.txt  filesys_write.cpp  fs_read.cpp  hannutower.cpp  myfile.txt  test_rr.cpp  virtual_inherit_init.cpp
other/arg_cc/: main.cpp
other/callback/: test.c
other/chrono/: chrono_steady.cpp  timer_chrono.cpp
other/cycle_task/: cycle_task.cpp  cycle_task_a.cpp  highRes.cpp  test
other/file_opertion/: ftest.cpp  test.cpp
other/format_output/: format.cpp
other/lambda/: lambda_use.cpp
other/move/: move_impl.cpp
other/polymorphism/: a.out  test.cpp
other/pubsub/: CMakeLists.txt  request.cpp  sample-ids.hpp
other/pubsub/dds/: test.cpp
other/pubsub/dds/arm_porting/arm_install/include/fastcdr/: config.h
other/pubsub/dds/arm_porting/arm_install/include/fastdds/: config.hpp
other/pubsub/dds/arm_porting/arm_install/lib/: libcrypto.so.1.1  libfastcdr.so.2.2.5  libfastdds.so.3.1  libssl.so.1.1  libtinyxml2.so.10  libtinyxml2.so.10.0.0
other/pubsub/dds/arm_porting/arm_install/lib/cmake/fastcdr/: fastcdr-config-version.cmake  fastcdr-shared-targets-release.cmake
other/pubsub/dds/arm_porting/arm_install/lib/cmake/tinyxml2/: tinyxml2-shared-targets-noconfig.cmake  tinyxml2-shared-targets.cmake
other/pubsub/dds/arm_porting/arm_install/lib/foonathan_memory/cmake/: foonathan_memory-config-noconfig.cmake  foonathan_memory-config.cmake
other/pubsub/dds/arm_porting/arm_install/lib/pkgconfig/: asio.pc  libcrypto.pc  libssl.pc  openssl.pc  tinyxml2.pc
other/pubsub/dds/arm_porting/arm_install/share/fastdds/cmake/: fastdds-config.cmake  fastdds-shared-targets-release.cmake  fastdds-shared-targets.cmake
other/pubsub/dds/arm_porting/hello_world/: CMakeLists.txt
other/pubsub/dds/delivery_mechanisms/: CMakeLists.txt
other/pubsub/dds/delivery_mechanisms/src/: Application.cpp  PubSubApp.cpp  PublisherApp.cpp  SubscriberApp.cpp  main.cpp
other/pubsub/dds/delivery_mechanisms/types/: DeliveryMechanisms.idl
other/pubsub/dds/performance/latency/: CMakeLists.txt  LatencyTestPublisher.cpp
other/pubsub/dds/performance/throughout/: CMakeLists.txt
other/pubsub/dds/request-response/: CMakeLists.txt  ClientApp.cpp  ClientApp.hpp  ServerApp.cpp  ServerApp.hpp
other/pubsub/dds/request_reply/: CMakeLists.txt
other/pubsub/dds/request_reply/include/: Application.hpp  CLIParser.hpp  ClientApp.hpp  ServerApp.hpp  app_utils.hpp
other/pubsub/dds/request_reply/src/: Application.cpp  ClientApp.cpp  ServerApp.cpp  main.cpp
other/pubsub/dds/request_reply/types/: Calculator.cxx  Calculator.h  CalculatorCdrAux.hpp  CalculatorCdrAux.ipp  CalculatorPubSubTypes.cxx  CalculatorPubSubTypes.h
other/pubsub/example/: CMakeLists.txt
other/pubsub/example/config/: vsomeip-tcp-client.json  vsomeip-tcp-service.json  vsomeip-udp-client.json  vsomeip-udp-service.json  vsomeip.json
other/pubsub/get_set_eventpb/: CMakeLists.txt
other/pubsub/get_set_eventpb/include/: client_sample.hpp  service_sample.hpp
other/pubsub/get_set_eventpb/src/: client_sample.cpp  client_subscribe.cpp  service_notify.cpp  service_sample.cpp
other/pubsub/sample_service/: CMakeLists.txt  client_tcp.json  client_udp.json  request-sample.cpp  sample_srvcli.cpp  service_tcp.json  service_udp.json
other/pubsub/ser_dser/: ser_dser.cpp
other/pubsub/src/: client-app.cpp  service.cpp
other/pubsub/subnotify/: CMakeLists.txt
other/pubsub/subnotify/src/: client.cpp  service.cpp
other/pubsub/throughput/: loan_test.cpp  main.cpp  test.cpp  throughputTypes.hpp  throughput_pub.cpp  throughput_pub.hpp  throughput_sub.cpp  throughput_sub.hpp
other/rt_test/: a.out  helloworld  helloworld.cpp  os_test.c  vtest.cc
other/script_test/: even.sh
other/share_data/: a.out  call_back.cpp  case1.cpp  case2.cpp  case3.cpp  case4.cpp  case5.cpp  case6.cpp  case7.cpp  multicom.cpp  my_program  share_ptr.cpp  shdata.cpp
other/sharedata/: a.out  observer.cpp  reference_passing.cpp  sh_ptr.cpp  singleton.cpp  static_mem.cpp
other/static/: static.cpp
other/statistics/: countoff.cpp
other/string_view/: operator_sv.cpp  using_stringview.cpp
other/testcode/: arg_test.cpp  color_test.cpp  filefunc.cpp  filesys_read.cpp  filesys_write.cpp  fs_write.cpp  inherated_value_pass.cpp  left.cpp  overload_mac.cpp  protect_inhrit.cpp  protected_member.cpp  tempover.cpp  test_mode.cpp  time_cal.cpp  tttt.cpp  virtual_inherit.cpp
other/thread_class/: native_hdl.cpp
other/timer/: basic_timer.cpp  cv.cpp  cv_.cpp  pState.cpp  producer_consumer.cpp  pstate.cpp  sigleThreadTimer.cpp  singleThreadPriQueue.cpp  state.cpp  time.cpp  (+3 more)
other/timer/testtimer/: CMakeLists.txt  Timer.hpp  TimerManager.hpp  main.cpp
signal/: sigpro.cpp  sigtest.cpp
(+155 files in other folders)
